<resources>
    <string name="app_name">AndroidProject</string>

    <string name="click_view">0</string>
    <string name="coffee_image">image of progress bar icon</string>
    <string name="title">&lt;Title&gt;COM SCI CLICKER&lt;/Title&gt;</string>
    <string name="click_img">Clicker Image</string>
    <string name="shop_button">TO SHOP</string>
    <string name="settings_button">TO SETTINGS</string>

    <string name="shop_title">printf("Click Shop");</string>
    <string name="upgrade_click">/*  Click Upgrade  */</string>
    <string name="click_upgrade1">Upgrade per Click By 1 byte</string>
    <string name="click_upgrade2">Upgrade per Click By 5 bytes</string>
    <string name="upgrade_passive">// Passive Upgrade</string>
    <string name="num_of_bytes">/* number of bytes */</string>
    <string name="passive_upgrade1">Unlock Passive Clicker</string>
    <string name="passive_upgrade2">Increase Passive click by 8 bytes</string>
    <string name="upgrade_storage">#Progress Bar Upgrade</string>
    <string name="storage_upgrade1">Unlock Progress Bar</string>
    <string name="storage_upgrade2">Increase progress bar speed by 1 byte</string>
    <string name="buy">BUY</string>
    <string name="homeBtn">TO HOME</string>
    <string name="Unlock">Error: clicker.lang.UnlockException: Unlock Me</string>
    <string name="SOLD">SOLD</string>
</resources>