<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/gradientlist"
    android:id="@+id/mainLayout"

    >
    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="21dp"
        android:text="@string/title"
        android:fontFamily="@font/firacode"
        android:textStyle="bold"
        android:textColor="#fff"



        />

    <TextView
        android:id="@+id/clickText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_view"
        android:layout_gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="75sp"
        android:layout_marginTop="20dp"
        android:textColor="#fff"
        android:textStyle="bold|italic"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_of_bytes"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:textStyle="bold|italic"
        android:fontFamily="@font/firacode"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:layout_gravity="center_horizontal"
        >
    <ProgressBar
        android:id="@+id/progBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:max="200"
        android:minWidth="300dp"
        android:layout_marginTop="20dp"
        android:progress="0"
        />

        <ImageView
            android:layout_width="51dp"
            android:layout_height="match_parent"
            android:src="@drawable/coffee"
            android:scaleType="fitXY"
            android:contentDescription="@string/coffee_image"

            />
    </LinearLayout>
    <TextView
        android:id="@+id/progText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Unlock"
        android:textColor="@color/white"
        android:layout_marginLeft="40dp"
        android:textStyle="bold|italic"
        android:fontFamily="@font/firacode"/>

    <ImageButton
        android:id="@+id/clicker"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/man"
        android:scaleType="fitStart"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded"
        android:contentDescription="@string/click_img"
        android:soundEffectsEnabled="false"
        />



        <Button
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/shopBtn"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/shop_button"
            android:textStyle="bold|italic"
            android:textSize="20sp"
            android:background="@drawable/button_background"
            android:textColor="#fff"


            />

        <Button
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/settingsBtn"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/settings_button"
            android:textStyle="bold|italic"
            android:textSize="20sp"
            android:background="@drawable/button_background"
            android:textColor="#fff"


            />

</LinearLayout>