<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    >
<LinearLayout

xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientlist"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/shopTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="55dp"
        android:text="@string/shop_title"
        android:fontFamily="@font/firacode"
        android:textStyle="bold"
        android:textSize="29sp"
        android:textColor="#fff"
        />
    <TextView
        android:fontFamily="@font/firacode"
        android:id="@+id/clickUpgradeHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="25dp"
        android:text="@string/upgrade_click"
        android:textSize="25sp"
        android:textColor="#fff"
        />
    <LinearLayout
        android:layout_marginStart="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        >

    <TextView
        android:fontFamily="@font/firacode"
        android:id="@+id/clickUpgrade1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_upgrade1"
        android:textSize="16sp"
        android:textColor="#fff"
       />
        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buy"

            android:background="@drawable/button_background"
            android:textColor="#fff"
            android:textStyle="bold|italic"
           />
    </LinearLayout>
    <LinearLayout
        android:layout_marginStart="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"

        >

        <TextView
            android:fontFamily="@font/firacode"
            android:id="@+id/clickUpgrade2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_upgrade1"
            android:textSize="16sp"
            android:textColor="#fff"
            />
        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buy"
            android:background="@drawable/button_background"
            android:textColor="#fff"
            android:textStyle="bold|italic"

            />
    </LinearLayout>


    <TextView
        android:fontFamily="@font/firacode"
        android:id="@+id/passiveUpgradeHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:text="@string/upgrade_passive"
        android:textSize="25sp"
        android:textColor="#fff"/>
    <LinearLayout
        android:layout_marginStart="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        >

        <TextView
            android:id="@+id/passiveUpgrade1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passive_upgrade1"
            android:textSize="16sp"
            android:textColor="#fff"
            android:fontFamily="@font/firacode"


            />
        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buy"
            android:background="@drawable/button_background"
            android:textColor="#fff"
            android:textStyle="bold|italic"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginStart="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        >

        <TextView
            android:id="@+id/passiveUpgrade2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passive_upgrade1"
            android:textSize="16sp"
            android:textColor="#fff"
            android:fontFamily="@font/firacode"

            />
        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buy"
            android:background="@drawable/button_background"
            android:textColor="#fff"
            android:textStyle="bold|italic"

            />
    </LinearLayout>


    <TextView
        android:fontFamily="@font/firacode"
        android:id="@+id/storageUpgradeHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:text="@string/upgrade_storage"
        android:textSize="25sp"
        android:textColor="#fff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passiveUpgrade2" />

    <LinearLayout
        android:layout_marginStart="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        >

        <TextView
            android:id="@+id/storageUpgrade1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/storage_upgrade1"
            android:textSize="16sp"
            android:textColor="#fff"
            android:fontFamily="@font/firacode"
            />
        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buy"
            android:background="@drawable/button_background"
            android:textColor="#fff"
            android:textStyle="bold|italic"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginStart="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"

        >

        <TextView
            android:id="@+id/storageUpgrade2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/storage_upgrade2"
            android:textSize="16sp"
            android:textColor="#fff"
            android:fontFamily="@font/firacode"
            />
        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buy"
            android:background="@drawable/button_background"
            android:textColor="#fff"
            android:textStyle="bold|italic"
            />
    </LinearLayout>

    <Button
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/HomeBtn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/homeBtn"
        android:textStyle="bold|italic"
        android:textSize="20sp"
        android:background="@drawable/button_background"
        android:textColor="#fff"
        />

</LinearLayout>
</ScrollView>